--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             
             <button class="button" id="button_delLastChar"
             title="Delete the last character">
-                →
+                DEL
             </button>
             
             <button class="button button_number" value="4">
