add square root, +/- logic + memory partly

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 
             <div class="display_middleBar middleBar">
                 <div class="middleBar_mem">
-                    <button id="middleBar_memButton">M1:</button>
+                    <button id="middleBar_memButton" value="0">
+                        M1:
+                    </button>
 
                     <input type="text" id="middleBar_memValue"
                     placeholder="0" value="" readonly>
@@ -78,7 +80,7 @@
             </button>
             
             <button class="button button_operUnary" id="button_changeSign"
-            title="Change sign">
+            value="+/-" title="Change sign">
                 +/-
             </button>
             
