--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </button>
             
             <button class="button" id="button_markUp"
-            title="Margin">
+            title="Margin (Markup)">
                 MU
             </button>
             
@@ -181,7 +181,6 @@
     <!-- Workspace end -->
 
     <script src="./js/canvas.js"></script>
-    <!-- <script src="./js/solve.js"></script> -->
     <script src="./js/script.js"></script>
 </body>
 </html>
