add F logic + few validations + focus style

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <!-- Display start -->
         <div class="display">
             <div class="display_upperBar upperBar">
-                <button id="numberOfDecimals" title="Decimal places">
+                <button id="numberOfDecimals" title="Decimal places"
+                value = "initial">
                     F:<br>initial
                 </button>
 
