js refaсtor partly

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="display">
             <div class="display_upperBar upperBar">
                 <div class="upperBar_mem">
-                    <button class="button upperBar_memButton" value="0">
+                    <button class="button upperBar_memButton" value="m">
                         M1:
                     </button>
 
@@ -35,7 +35,7 @@
             </div>
 
             <div class="display_middleBar middleBar">
-                <button class="button button_numberOfDecimals" value="initial"
+                <button class="button button_numberOfDecimals" value="f"
                 id="numberOfDecimals" title="Decimal places">
                     F:<br>initial
                 </button>
@@ -110,7 +110,7 @@
                 √
             </button>
             
-            <button class="button button_delLastChar" value="Backspace"
+            <button class="button button_delLastChar" value="Delete"
             title="Delete the last character">
                 DEL
             </button>
@@ -163,7 +163,7 @@
                 =
             </button>
             
-            <button class="button button_resetCalc" value="Delete"
+            <button class="button button_resetCalc" value="Backspace"
             title="Reset calculator">
                 C
             </button>
@@ -184,7 +184,6 @@
     </div>
     <!-- Workspace end -->
 
-    <script src="./js/canvas.js"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
