--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
     <title>Calculator</title>
 
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style_min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
     rel="stylesheet">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="./img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#00aba9">
+    <meta name="theme-color" content="#ffffff">
 
 </head>
 <body>
@@ -117,7 +125,8 @@
             </button>
             
             <button class="button button_delLastChar" value="Delete"
-            data-action="del_last_char" title="Delete the last character">
+            data-action="del_last_char" title="Delete the last character"
+            id="button_delLastChar">
                 DEL
             </button>
             
@@ -200,12 +209,6 @@
     </div>
     <!-- Workspace end -->
 
-    <script src="./js/0_variables_and_checks.js"></script>
-    <script src="./js/1_common_functions.js"></script>
-    <script src="./js/2_calculation_logic.js"></script>
-    <script src="./js/3_other_logic.js"></script>
-    <script src="./js/4_click_numbers.js"></script>
-    <script src="./js/5_click_others.js"></script>
-    <script src="./js/6_interactive.js"></script>
+    <script type="module" src="./js/script_min.js"></script>
 </body>
 </html>
